# PyCAPIO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libcapio.hpp  libcapio_example.cpp  pycapio.cpp  pyproject.toml  run.sh
.github/workflows/: ci_cd.yml  release.yml
docs/: .gitignore  Doxyfile  Makefile  README.md  requirements.txt
docs/source/: conf.py  index.md  installation.md  usage.md
docs/source/_static/: custom.css
docs/source/api/: internals.md  native.md  pycapio.md
docs/source/cpp/: index.md
examples/: benchmark_configuration.json  example_config.json  example_directory_producer.json  libcapio_example.cpp  run.sh
examples/cpp/: example_readdir_config.json  libcapio_example.cpp  libcapio_readdir_example.cpp
examples/directory-producer/: list.py  produce.py
examples/producer-consumer/: consumer.py  producer.py
examples/python/: streaming_directory_example.py  streaming_example.py
examples/python-benchmarks/: consumer.py  producer.py  submit.sh
examples/python/directory-producer/: launch.sh  list.py  produce.py
include/: CapioTextIOWrapper.hpp  IOWrapper.hpp  OsPath.hpp  PyCapioException.hpp  ScandirIteratorWrapper.hpp  _CapioIOWrapper.hpp  _CapioOsPath.hpp  _CapioScandirIteratorWrapper.hpp  _libcapio_impl.hpp  libcapio.hpp  stack_trace.hpp
pycapio/: PyCapioTextIOWrapper.py  __init__.py  __main__.py  global_vars.py  logger.py
pycapio/context/: __init__.py
pycapio/core/: __init__.py
pycapio/internals/: __init__.py
src/: OsPath.cpp  PyCapioException.cpp  ScandirIteratorWrapper.cpp  pycapio.cpp
tests/: CapioTextIOWrapper.cpp  config.json  conftest.py  requirements.txt  test_context.py  test_internals.py  test_os_path.py  test_proxies.py  test_py_capio.py  test_py_capio_streaming.py  test_pycapio_directory.py  utils.py
