[project]
name = "pycapio"
version = "0.0.1"
description = "Python interface library for the libcapio library"
authors = [{ name = "Marco Edoardo Santimaria", email = "marcoedoardo.santimaria@unito.it" }]

readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=3.0.1",
]
build-backend = "scikit_build_core.build"

[project.urls]
Homepage = "https://capio.hpc4ai.it"
Source = "https://github.com/high-performance-io/libcapio"

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["pycapio"]


[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"