[project]
name = "pycapio"
dynamic = ["version"]
description = "Python interface library for the libcapio library"
authors = [{ name = "Marco Edoardo Santimaria", email = "marcoedoardo.santimaria@unito.it" }]

readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "py_capio_cl"
]


[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=3.0.1",
]
build-backend = "scikit_build_core.build"

[project.urls]
Homepage = "https://capio.hpc4ai.it"
Source = "https://github.com/high-performance-io/libcapio"

[project.scripts]
pycapio = "pycapio.__main__:main"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = "(?m)VERSION\\s+(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
result = "{major}.{minor}.{patch}"


[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["pycapio"]

[tool.scikit-build.cmake.define]
CAPIO_RELEASE_TAG = "6b14036e85678f54cf9fa265141edb98b3394c8a"
CMAKE_BUILD_TYPE = "Release"
CAPIO_LOG = "OFF"
CAPIO_BUILD_POSIX = "OFF"
